# energymon-rust

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  singleton.rs
