[package]
name = "energymon"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust wrappers for energymon-sys"
license = "MIT"
homepage = "https://github.com/energymon/energymon-rust"
repository = "https://github.com/energymon/energymon-rust"
keywords = ["energymon", "energy", "monitoring"]

[dependencies]
energy-monitor = "0.1.0"
libc = "0.1"

[dependencies.energymon-default-sys]
git = "https://github.com/energymon/energymon-default-sys.git"

[dependencies.energymon-sys]
git = "https://github.com/energymon/energymon-sys.git"
